# ai-dev-platform

./: AGENTS.md  ARCHITECTURE.md  IMPLEMENTATIONS_REPORT.md  PROJECT_SUMMARY.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/app/: main.py
backend/alembic/app/api/v1/: agents.py  analytics.py  auth.py  pipelines.py
backend/alembic/app/core/: config.py  database.py
backend/alembic/app/middleware/: __init__.py  auth.py
backend/alembic/app/models/: agent.py  ai_activity.py  pipeline.py  user.py
backend/alembic/app/schemas/: __init__.py  ai_activity.py  analytics.py  common.py  pipeline.py  user.py
backend/alembic/app/services/: __init__.py  agent_executor.py  ai_activity_service.py  ai_client.py  project_service.py  user_service.py
backend/alembic/app/utils/: __init__.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/api/v1/: __init__.py  agents.py  ai_activities.py  analytics.py  health.py  mcp.py  projects.py  webhook.py
backend/app/core/: security.py
backend/app/middleware/: cors.py  logging.py  rate_limit.py
backend/app/models/: __init__.py  mcp.py  project.py
backend/app/schemas/: agent.py  mcp.py  project.py
backend/app/services/: base.py  github_service.py
backend/app/utils/: datetime.py  file.py  logging.py  string.py  validation.py
backend/scripts/: seed.py
backend/tests/: conftest.py
backend/tests/integration/: test_ai_activities_integration.py  test_auth_integration.py  test_projects_integration.py
backend/tests/unit/: test_utils_string.py  test_utils_validation.py
(+39 files in other folders)
